# smc-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKTRADER_USAGE.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  check_mongo.py  diagnose.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_bt.py  test_engine.py  test_fastapi.py  test_pydantic.py  test_real_loader.py
.claude/: settings.local.json
.githooks/: pre-push
agent_docs/: api_and_architecture.md  building_and_docker.md  code_conventions.md  development_workflow.md  running_tests.md  system_architecture.md  troubleshooting_known_issues.md
config/: backtest_config.json  config.json  debug_scalper_swing.json  live_trading_config.json
db/: __init__.py  connection.py
docs/: BACKEND_ENGINE_AND_DASHBOARD_REFERENCE_V1_0_0.md  BACKTEST_RUN_MODES.md  BINANCE_REAL_TRADING_IMPLEMENTATION_PLAN_20260315.md  BOS_MODULE_VERIFICATION_REPORT.md  BT_PRICE_ACTION_AUDIT_20260307.md  CLOUD_DEPLOYMENT_GUIDE.md  ENGINE_REVIEW.md  ENGINE_STRATEGY_REVIEW_2026.md  ENTRY_MECHANISMS_AND_GHOST_TRADE.md  MTF_SYNC_VERIFICATION_REPORT.md  PHASE_1_1_0_ROADMAP.md  README.md  RELEASE_NOTES_WORKFLOW.md  SELL_THE_BOTTOM_INCIDENT_ANALYSIS.md  TA_LIB_ANALYSIS.md  TECHNICAL_DEBT_REPORT.md
engine/: adapters.py  backtest_engine.py  base_engine.py  binance_account_client.py  bt_analyzers.py  bt_backtest_engine.py  bt_live_engine.py  bt_oco_patch.py  data_loader.py  execution_settings.py  live_data_feed.py  logger.py  (+10 more)
(+143 files in other folders)
