[project]
name = "smc-bot"
version = "1.0.0"
description = "Crypto trading platform with Backtrader backtest and paper live"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["venv", ".venv", "__pycache__", "node_modules"]

[tool.ruff.lint]
# E402: import not at top — required when sys.path is modified before imports (tests, main, server)
ignore = ["E402"]
