[project]
name = "smc-bot"
version = "1.0.0"
description = "Crypto trading platform with Backtrader backtest and paper live"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "venv",
    ".venv",
    ".ruff-ci-venv",
    "__pycache__",
    "node_modules",
    "web-dashboard/dist",
]

[tool.ruff.lint]
# E402: import not at top — required when sys.path is modified before imports (tests, main, server)
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Compact `if verbose: logger.info(...)` in entry-filter hot path
"strategies/bt_price_action.py" = ["E701"]
